Fixed some important things